# rs-easy-install-windows

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
easy-installer-windows/: Cargo.toml
easy-installer-windows/.cargo/: config.toml
easy-installer-windows/src/: main.rs
src/: main.rs
